# sanitize-clipboard

./: Cargo.toml  README.md
src/: main.rs  sanitize.rs
